2006-01-05  Michael Gerdau  <mgd@technosis.de>

	* include/winbase.h (WINADVAPI): Define.

2006-01-03  Christopher Faylor  <cgf@timesys.com>

	* include/winuser.h (CreateWindowStation): Correctly identify first
	argument as constant.
	(CreateWindowStation@): Ditto.

2006-01-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/uxtheme.h  [_WIN32_WINNT >= 0x0501]
	(TMT_*, BT_*): Add constants.

2005-12-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/winsock2.h: Don't define struct sockaddr_storage when
	building Cygwin.

2005-12-22  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ws2_32.c: New file, defining IPv6 constants. 
	* Makefile.in (SOURCES): Add ws2_32.c
	(EXTRA_OBJS): Add ws2_32.o.

2005-12-21  Michael Jung  <mjung@iss.tu-darmstadt.de>

	* lib/user32.def (PrivateExtractIconsA@32, 
	PrivateExtractIconsW@32): Define.
	* lib/shell32.c (IID_IShellLinkDataList): Add GUID.

2005-12-12  Christopher Faylor  <cgf@timesys.com>

	* include/winuser.h (WINSTA_ALL_ACCESS): Define.

2005-12-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/kernel32.def (CreateFiberEx): Correct suffix.

2005-12-09  Huw Davies <hdavies@users.sourceforge.net>
	    Danny Smith <dannysmith@users.sourceforge.net>

	* lib/msxml-uuid.c: New file to generate UUIDs for 
	MSXML interfaces.
	* lib/Makefile.in (UUID_OBJS): Add msxml-uuid.o.

2005-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GetDevicePowerState): Add prototype.
	* lib/kernel32.def (GetDevicePowerState): Correct suffix.

2005-12-07  Brian Gunlogson  <gmb300@users.sourceforge.net>

	* include/winuser.h (GetClassLongPtr{AW}): Guard prototypes with _WIN64.
	Define as macro if !_WIN64.
	(SetClassLongPtr{AW}): Likewise.
	(GCLP_*): Add GetClassLongPtr defines.
	* lib/user32.def (GetClassLongPtr{AW}): Remove stubs.
	(SetClassLongPtr{AW}): Likewise.

2005-11-18  Brian Gunlogson  <gmb300@users.sourceforge.net>

	* include/winuser.h (GetClassLongPtr{AW}): Add prototypes.